# ferrocene

./: Cargo.toml  Readme.md
src/: elder.rs  lib.rs  main.rs  main1.rs  main_.rs  terminal.rs  terminal_.rs  yatui.rs
src/display/: mod.rs  tty.rs
src/event/: mod.rs
src/frame/: mod.rs  style.rs
src/yatui/: display.rs  event.rs  frame.rs  mod.rs
tests/: main.rs  tty_editor.rs
