[package]
name                  = "ferrocene"
description           = """
                          Ferrocene is a library to draw mutlitple frames of varoius type in several tiling modes on multiple displays.
                          It can be used e.g. to create similar interfaces to ncurses.
                        """
version               = "0.1.2"
authors               = [
                          "sivizius <sivizius@ohai.su>"
                        ]
edition               = "2018"

[dependencies]
libc                  = "0.2"
unicode-segmentation  = "1.1.0"
bitflags              = "1.0"

[features]
display-tty           = []

[profile.dev]
opt-level             = 0

[profile.release]
opt-level             = 3
